New achievement Apprentice Pedantic (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 248 points<br>
+Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 252 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -37,6 +37,7 @@ Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Pedantic (Level 1)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 2)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
+<li><div class="title">Apprentice Pedantic (Level 3)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -78,28 +79,28 @@ Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-13055 rev-parse
-1203 stash
- 576 config
- 322 status
- 181 commit
- 177 push
- 119 checkout
-  86 add
+13568 rev-parse
+1249 stash
+ 679 config
+ 353 status
+ 195 push
+ 192 commit
+ 133 checkout
+  88 add
+  61 branch
   51 diff
-  50 branch
-  39 pull
+  43 pull
+  26 reset
+  24 rebase
   23 remote
-  22 reset
-  22 rebase
-  21 fetch
+  22 fetch
   17 achievements
   16 merge
    8 log
-   7 flow
+   8 flow
+   7 rm
+   7 mv
    7 cherry-pick
-   6 rm
-   6 mv
    6 clone
    5 show
    5 init
