New achievement Apprentice Gardner (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 380 points<br>
+Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 383 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -37,6 +37,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Gardner (Level 1)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
+<li><div class="title">Apprentice Gardner (Level 2)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -104,44 +105,45 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-33863 rev-parse
+36691 rev-parse
 2522 config
-1803 stash
- 929 status
- 521 commit
- 454 push
- 318 add
- 257 checkout
- 115 branch
- 102 diff
-  92 remote
-  89 log
+1820 stash
+1012 status
+ 552 commit
+ 469 push
+ 343 add
+ 265 checkout
+ 125 branch
+ 124 diff
+ 110 log
+ 100 remote
   81 pull
-  44 reset
-  44 rebase
+  49 rebase
+  46 reset
   37 merge
-  33 clone
+  35 clone
   32 fetch
-  20 rm
-  20 init
+  26 rm
+  21 init
   17 achievements
-  11 mv
+  15 mv
+  11 gc
   11 flow
    8 submodule
-   8 gc
+   8 show
+   7 clean
    7 cherry-pick
    7 !git
    6 tag
-   6 show
-   6 clean
+   6 fsck
    5 filter-branch
    4 symbolic-ref
+   4 show-branch
    4 revert
    3 blame
-   2 show-branch
+   2 reflog
    2 ls-files
-   2 fsck
-   1 reflog
+   1 prune
    1 help
 </pre>
 <script type="text/javascript">
