New achievement Apprentice Goldsmith (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 428 points<br>
+Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 432 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -40,6 +40,7 @@ Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Gardner (Level 2)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
+<li><div class="title">Apprentice Goldsmith (Level 3)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -114,20 +115,20 @@ Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-50810 rev-parse
-3384 config
-1878 stash
-1454 status
- 742 commit
- 608 push
- 516 add
- 361 checkout
- 261 diff
- 233 log
+50947 rev-parse
+3485 config
+1885 stash
+1467 status
+ 746 commit
+ 615 push
+ 527 add
+ 365 checkout
+ 267 diff
+ 236 log
  170 branch
  147 remote
- 138 pull
-  86 clone
+ 141 pull
+  88 clone
   70 rebase
   66 reset
   61 rm
@@ -138,7 +139,7 @@ Git commands sorted by usage:
   22 clean
   17 achievements
   15 gc
-  12 show
+  14 show
   11 flow
    8 submodule
    8 cherry-pick
